@@ -34,6 +34,7 @@ Changes in 0.61.2:
     policy that checks to make sure that shared libraries do not have
     unresolved symbols.  Additional code could be written to check
     binaries too.
+  * cvc checkout, update, and commit now show some progress
 
 Changes in 0.61.1:
   * Cleaned up error message which results from Conary not being able to
